# understats-fpl

./: .airflow_env  .gitignore  README.md  env.example  postgres_setup.md  pyproject.toml  requirements.txt  squad-update.ipynb  visualizations.ipynb
.ipynb_checkpoints/: squad-update-checkpoint.ipynb
dags/transformation_layer/: __main__.py  player_transformation.py  team_transformation.py
dags/understat_scraping/: __main__.py  player_retrieval.py  team_match_data_retrieval.py  utils.py
dags/utils/: config.py
