[tool.poetry]
name = "understats-fpl"
version = "0.1.0"
description = ""
authors = ["Matthaios Letsios <letsiosm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
pandas = "^1.4.3"
bs4 = "^0.0.1"
requests = "^2.28.1"
notebook = "^6.4.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
